fix: hide scrollbar of place-wrap in component.css

--- a/assets/css/component.css
+++ b/assets/css/component.css
@@ -95,7 +95,10 @@
 
 /* 照片上下落差排列 */
 .place-wrap {
-	overflow: scroll;
+	overflow-x: scroll;
+}
+.place-wrap::-webkit-scrollbar {
+  display: none;
 }
 .place-container {
 	width: 1420px;
